Moving core into apps/.

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ packages =
     newebe/apps/auth
     newebe/apps/activities
     newebe/apps/news
-    newebe/core
+    newebe/apps/core
     newebe/tools
     newebe/lib
 
