Including data files in the Python packaging configuration.

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,121 +39,14 @@ packages =
     newebe/lib
 
 scripts = newebe/newebe_server.py
-extra_files =
-    setup.cfg
-    setup.py
-    README.rst
-    AUTHORS.txt
-    LICENSE
-    newebe/static
-    newebe/static/pictures
-    newebe/static/pictures/styles
-    newebe/static/pictures/tests
-    newebe/static/pictures/tests/specs
-    newebe/static/pictures/app
-    newebe/static/pictures/src
-    newebe/static/pictures/src/views
-    newebe/static/pictures/src/models
-    newebe/static/pictures/src/routers
-    newebe/static/notes
-    newebe/static/notes/styles
-    newebe/static/notes/jasmine
-    newebe/static/notes/jasmine/spec
-    newebe/static/notes/jasmine/lib
-    newebe/static/notes/jasmine/lib/jasmine-1.0.2
-    newebe/static/notes/jasmine/src
-    newebe/static/notes/app
-    newebe/static/notes/src
-    newebe/static/notes/src/views
-    newebe/static/notes/src/controllers
-    newebe/static/notes/src/models
-    newebe/static/contacts
-    newebe/static/contacts/styles
-    newebe/static/contacts/docs
-    newebe/static/contacts/app
-    newebe/static/contacts/src
-    newebe/static/contacts/src/views
-    newebe/static/contacts/src/models
-    newebe/static/profile
-    newebe/static/profile/styles
-    newebe/static/profile/docs
-    newebe/static/profile/app
-    newebe/static/profile/lib
-    newebe/static/profile/src
-    newebe/static/profile/src/views
-    newebe/static/profile/src/models
-    newebe/static/images
-    newebe/static/activities
-    newebe/static/activities/styles
-    newebe/static/activities/docs
-    newebe/static/activities/app
-    newebe/static/activities/src
-    newebe/static/activities/src/views
-    newebe/static/activities/src/models
-    newebe/static/css
-    newebe/static/css/images
-    newebe/static/js
-    newebe/static/news
-    newebe/static/news/styles
-    newebe/static/news/docs
-    newebe/static/news/app
-    newebe/static/news/src
-    newebe/static/news/src/views
-    newebe/static/news/src/models
-    newebe/static/platform
-    newebe/static/platform/styles
-    newebe/static/platform/docs
-    newebe/static/platform/app
-    newebe/static/platform/src
-    newebe/static/platform/src/views
-    newebe/static/platform/src/controllers
-    newebe/static/platform/src/models
-    newebe/static/platform/src/utils
-    newebe/core/_design
-    newebe/core/_design/views
-    newebe/core/_design/views/user
-    newebe/core/_design/views/lastsequence
-    newebe/core/_design/views/contact
-    newebe/core/_design/views/requested
-    newebe/core/_design/views/contacttags
-    newebe/core/_design/views/tags
-    newebe/core/_design/views/trusted
-    newebe/core/_design/views/pending
-    newebe/core/templates
-    newebe/apps/news/templates
-    newebe/apps/auth/templates
-    newebe/apps/contacts/templates
-    newebe/apps/pictures/templates
-    newebe/apps/notes/templates
-    newebe/apps/profile/templates
-    newebe/apps/news/_design
-    newebe/apps/news/_design/views
-    newebe/apps/news/_design/views/all
-    newebe/apps/news/_design/views/mine
-    newebe/apps/news/_design/views/contact
-    newebe/apps/news/_design/views/full
-    newebe/apps/news/_design/views/tags
-    newebe/apps/news/_design/views/mine-tags
-    newebe/apps/notes/_design
-    newebe/apps/notes/_design/views
-    newebe/apps/notes/_design/views/mine_sort_date
-    newebe/apps/notes/_design/views/mine
-    newebe/apps/notes/_design/views/mine_sort_title
-    newebe/apps/pictures/_design
-    newebe/apps/pictures/_design/views
-    newebe/apps/pictures/_design/views/all
-    newebe/apps/pictures/_design/views/last
-    newebe/apps/pictures/_design/views/contact
-    newebe/apps/pictures/_design/views/owner
-    newebe/apps/pictures/_design/views/tags
-    newebe/apps/pictures/_design/views/mine-tags
-    newebe/apps/activities/_design
-    newebe/apps/activities/_design/views
-    newebe/apps/activities/_design/views/all
-    newebe/apps/activities/_design/views/others
-    newebe/apps/activities/_design/views/mine
-    newebe/apps/activities/_design/views/full
-    newebe/apps/activities/templates
+
+data_files =
+    newebe =
+        setup.cfg
+        setup.py
+        README.rst
+        LICENSE
+        MANIFEST.in
 
 [backwards_compat]
 use_2to3 = True
