Adding commons/ to the packaging configuration files.

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ packages =
     newebe/apps/activities
     newebe/apps/news
     newebe/apps/core
+    newebe/apps/commons
     newebe/tools
     newebe/lib
 
