--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,8 @@ recursive-include newebe/apps/auth/templates *
 recursive-include newebe/apps/contacts/templates *
 recursive-include newebe/apps/core/_design *
 recursive-include newebe/apps/core/templates *
+recursive-include newebe/apps/commons/_design *
+recursive-include newebe/apps/commons/templates *
 recursive-include newebe/apps/news/_design *
 recursive-include newebe/apps/news/templates *
 recursive-include newebe/apps/notes/_design *
