This is needed for the tests in auth/ to work.

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ requires-dist =
     pytz
     whoosh
     lxml
+    cssselect
 classifier =
     Development Status :: 2 - Pre-Aplha
     Environment :: Web Environment
