--- a/setup.cfg
+++ b/setup.cfg
@@ -1,22 +1,21 @@
 [metadata]
 name = newebe
-version = 0.3.0
+version = 0.6.0
 author = Gelnior
 author-email = 
 summary = Distributed social network.
-description-file = 	README.rst
+description-file = README.rst
 home-page = https://github.com/gelnior/newebe
 requires-dist =
     setuptools
     Couchdbkit==0.5.6
-    Tornado==2.2.0
-    markdown==2.0
+    Tornado==2.4
     pytz
     whoosh
     lxml
     cssselect
 classifier =
-    Development Status :: 2 - Pre-Aplha
+    Development Status :: 4 - Beta
     Environment :: Web Environment
     Intended Audience :: End Users/Desktop
     License :: OSI Approved :: GNU Affero General Public License v3
