--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ requires-dist =
     whoosh
     lxml
     cssselect
+    pyyaml
 classifier =
     Development Status :: 4 - Beta
     Environment :: Web Environment
