--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ requires-dist =
     lxml
     cssselect
     pyyaml
+    markdown
 classifier =
     Development Status :: 4 - Beta
     Environment :: Web Environment
