--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ requires-dist =
     cssselect
     pyyaml
     markdown
+    importlib
 classifier =
     Development Status :: 4 - Beta
     Environment :: Web Environment
