make setup debian compliant

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,8 +8,8 @@ description-file = README.rst
 home-page = https://github.com/gelnior/newebe
 requires-dist =
     setuptools
-    Couchdbkit==0.5.6
-    Tornado==2.4
+    Couchdbkit
+    Tornado
     pytz
     whoosh
     lxml
@@ -42,7 +42,7 @@ packages =
     newebe/lib
     newebe/client
 
-scripts = newebe/newebe_server.py
+scripts = newebe/newebe.py
 
 data_files =
     newebe =
