--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,31 @@
 Source: newebe
-Maintainer: Gelnior <gelnior@free.fr>
-Section: misc
+Maintainer: Frank Rousseau <gelnior@free.fr>
+Section: python
 Priority: optional
-Standards-Version: 3.9.2
-Build-Depends: debhelper (>= 8)
+Build-Depends: python-setuptools (>= 0.6b3), python (>= 2.6.6-3), debhelper (>= 7.4.3)
+Standards-Version: 3.9.1
 
-Package: hithere
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: distributed social netwok
+Package: python-newebe
+Architecture: all
+Depends: ${misc:Depends}, ${python:Depends}
+Description: Distributed social network.
+ ==========================
+ Newebe, Feel Free to Share
+ ==========================
+ .
+ Growth of web applications has been a huge improvement for social sharing and
+ collaborative work. Unfortunately, to enjoy these new tools, we have traded 
+ our privacy. Newebe aims to solve this problem by providing a social 
+ tool you host at your home and that connects directly with your contacts. 
+ .
+ Before you ask, Newebe is not like Diaspora, it is thinked distributed in a
+ peer-2-peer manner : it is designed to be self-hosted and does not require
+ 3rd party server.
+ .
+ .
+ Installation Instructions
+ =========================
+ .
+ Check the website install section : http://newebe.org/#install
+ .
+
