--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: newebe
 Maintainer: Frank Rousseau <gelnior@free.fr>
 Section: python
 Priority: optional
-Build-Depends: python-setuptools (>= 0.6b3), python (>= 2.6.6-3), debhelper (>= 7.4.3)
+Build-Depends: python-setuptools (>= 0.6b3), python (>= 2.6.6-3), debhelper (>= 7.4.3) python-couchdbkit python-tornado python-tz python-whoosh python-lxml python-cssselect python-yaml python-pycurl python-dev python-imaging build-essential couchdb git libxml2-dev libxslt-dev openssl supervisor
 Standards-Version: 3.9.1
 
 Package: python-newebe
