--- a/debian/control
+++ b/debian/control
@@ -2,16 +2,18 @@ Source: newebe
 Maintainer: Frank Rousseau <gelnior@free.fr>
 Section: python
 Priority: optional
-Build-Depends: python-setuptools (>= 0.6b3), python (>= 2.6.6-3), debhelper (>= 7.4.3) python-couchdbkit python-tornado python-tz python-whoosh python-lxml python-cssselect python-yaml python-pycurl python-dev python-imaging build-essential couchdb git libxml2-dev libxslt-dev openssl supervisor
+Build-Depends: python-setuptools (>= 0.6b3), python (>= 2.6.6-3), 
+               debhelper (>= 7.4.3), python-dev, python-imaging, 
+               openssl
 Standards-Version: 3.9.1
 
 Package: newebe-server
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends}, couchdb, supervisor, 
-         python-whoosh, python-yaml, python-couchdbkit, 
+         python-whoosh, python-cssselect, python-yaml, python-couchdbkit, 
          python-tornado, python-tz, python-pycurl, python-lxml 
 Description: Distributed social network.
- .
+ . 
  Growth of web applications has been a huge improvement for social sharing and
  collaborative work. Unfortunately, to enjoy these new tools, we have traded 
  our privacy. Newebe aims to solve this problem by providing a social 
