change exe name

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,7 @@ packages =
     newebe/lib
     newebe/client
 
-scripts = newebe/newebe.py
+scripts = newebe/newebe_server.py
 
 data_files =
     newebe =
