--- a/debian/control
+++ b/debian/control
@@ -3,15 +3,15 @@ Maintainer: Frank Rousseau <gelnior@free.fr>
 Section: python
 Priority: optional
 Build-Depends: python-setuptools (>= 0.6b3), python (>= 2.6.6-3), 
-               debhelper (>= 7.4.3), python-dev, python-imaging, 
-               openssl
+               debhelper (>= 7.4.3), python-dev, openssl
 Standards-Version: 3.9.1
 
 Package: newebe-server
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends}, couchdb, supervisor, 
          python-whoosh, python-yaml, python-couchdbkit, 
-         python-tornado, python-tz, python-pycurl, python-lxml 
+         python-tornado, python-tz, python-pycurl, python-lxml,
+         python-imaging
 Description: Distributed social network.
  .
  Growth of web applications has been a huge improvement for social sharing and
