--- a/newebe/client/package.json
+++ b/newebe/client/package.json
@@ -30,7 +30,7 @@
     },
     "devDependencies": {
         "mocha": "0.14.0",
-        "expect.js": "0.1.2",
+        "chai": "1.4.2",
         "ws": "0.4.21"
     }
 }
