wrong package added for client

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ packages =
     newebe/apps/commons
     newebe/tools
     newebe/lib
-    newebe/public
+    newebe/client
 
 scripts = newebe/newebe_server.py
 
