--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-recursive-include newebe/static *
+recursive-include newebe/client *
 recursive-include newebe/apps/activities/templates *
 recursive-include newebe/apps/activities/_design *
 recursive-include newebe/apps/auth/templates *
