--- a/deploy/docker/Dockerfile
+++ b/deploy/docker/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get install -y libxml2-dev libxslt-dev supervisor
 # Install newebe
 RUN pip install git+git://github.com/gelnior/newebe.git
 
-# Configure user
+# Configure use
 RUN groupadd newebe
 RUN adduser --system --home /usr/local/var/newebe --ingroup newebe --gecos "Newebe system user" --shell /bin/false --quiet --disabled-password newebe 
 
@@ -24,10 +24,11 @@ RUN chown newebe:newebe /usr/local/var/newebe/
 
 # Set config
 ADD config.yaml /usr/local/etc/newebe/
+ADD supervisor.conf /etc/supervisor/
 
 # Configure supervisor to daemonize the process.
 ADD couchdb.conf /etc/supervisor/conf.d/
 ADD newebe.conf /etc/supervisor/conf.d/
 
 EXPOSE 8282
-CMD /usr/bin/supervisord
+CMD ["/usr/bin/supervisord", "-n"]
