--- a/deploy/ansible/roles/common/files/config.yaml
+++ b/deploy/ansible/roles/common/files/config.yaml
@@ -1,7 +1,9 @@
 main:
     port: 8282
     debug: False
-    ssl: False
     path: "/usr/local/var/newebe/"
     logpath: "/usr/local/var/log/newebe"
     timezone: "Europe/Paris"
+security:
+    certificate: "/usr/local/etc/newebe/certs/server.crt"
+    private_key: "/usr/local/etc/newebe/certs/server.key"
