set port to 8282 and change owner rights on newebe folder to newebe:newebe

--- a/debian/config.yaml
+++ b/debian/config.yaml
@@ -1,6 +1,7 @@
 main:
     path: "/var/lib/newebe/"
     logpath: "/var/log/newebe/"
+    port: 8282
 security:
     certificate: "/etc/newebe/certs/server.crt"
     private_key: "/etc/newebe/certs/server.key"
