--- a/newebe/client/package.json
+++ b/newebe/client/package.json
@@ -15,18 +15,18 @@
         "start": "brunch watch --server"
     },
     "dependencies": {
-        "javascript-brunch": "> 1.0 < 1.5",
-        "coffee-script-brunch": "> 1.0 < 1.5",
+        "javascript-brunch": "1.7.1",
+        "coffee-script-brunch": "1.8.0",
 
-        "css-brunch": "> 1.0 < 1.5",
-        "stylus-brunch": "> 1.0 < 1.5",
+        "css-brunch": "1.7.0",
+        "stylus-brunch": "1.8.0",
 
-        "jade-brunch": "> 1.0 < 1.5",
+        "jade-brunch": "1.8.1",
 
-        "uglify-js-brunch": "> 1.0 < 1.5",
-        "clean-css-brunch": "> 1.0 < 1.5",
+        "uglify-js-brunch": "1.7.7",
+        "clean-css-brunch": "1.7.1",
 
-        "auto-reload-brunch": "> 1.0 < 1.5"
+        "auto-reload-brunch": "1.7.3"
     },
     "devDependencies": {
         "mocha": "0.14.0",
