--- a/newebe/client/package.json
+++ b/newebe/client/package.json
@@ -24,9 +24,7 @@
         "jade-brunch": "1.8.1",
 
         "uglify-js-brunch": "1.7.7",
-        "clean-css-brunch": "1.7.1",
-
-        "auto-reload-brunch": "1.7.3"
+        "clean-css-brunch": "1.7.1"
     },
     "devDependencies": {
         "mocha": "0.14.0",
